<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border_parentlayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iit.ritik.insertdatabase.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/name"
        android:textSize="20dp"
        android:textStyle="italic"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <EditText
        style="@style/edi_text"
        android:id="@+id/edit_name"
        android:hint="@string/edit_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/admno"
        android:text="@string/adm"
        android:textSize="20dp"
        android:textStyle="italic"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <EditText
        style="@style/edi_text"
        android:id="@+id/edit_adm"
        android:hint="@string/edit_adm"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:text="@string/emailId"
        android:textSize="20dp"
        android:textStyle="italic"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <EditText
        style="@style/edi_text"
        android:id="@+id/edit_email"
        android:hint="@string/edit_emailId"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add"
        android:text="@string/add"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/border_button"
        android:layout_gravity="center_horizontal"
        android:onClick="insert"/>
</LinearLayout>
